[package]
name = "rvml"
version = "0.1.0"
authors = ["hobo0xcc <hobo0xcc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.5.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
clap = "2.33.3"